--- a/batch/batch/driver/templates/job_private.html
+++ b/batch/batch/driver/templates/job_private.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
-{% block title %}Job Private Instance Collection{% endblock %}
+{% block title %}Job Private Instance Manager{% endblock %}
 {% block content %}
 
-<h1>{{ job_private_inst_coll.name }}</h1>
+<h1>{{ jpim.name }}</h1>
 
 <h2>Configuration</h2>
 <div class="attributes">
-  <form action="{{ base_path }}/config-update/job-private/{{ job_private_inst_coll.name }}" method="POST">
-    <div>Boot disk size (in GB): <input name="boot_disk_size_gb" value="{{ job_private_inst_coll.boot_disk_size_gb }}" /></div>
-    <div>Max instances: <input name="max_instances" value="{{ job_private_inst_coll.max_instances }}" /></div>
-    <div>Max live instances: <input name="max_live_instances" value="{{ job_private_inst_coll.max_live_instances }}" /></div>
+  <form action="{{ base_path }}/config-update/jpim" method="POST">
+    <div>Boot disk size (in GB): <input name="boot_disk_size_gb" value="{{ jpim.boot_disk_size_gb }}" /></div>
+    <div>Max instances: <input name="max_instances" value="{{ jpim.max_instances }}" /></div>
+    <div>Max live instances: <input name="max_live_instances" value="{{ jpim.max_live_instances }}" /></div>
     <input type="hidden" name="_csrf" value="{{ csrf_token }}"/>
     <button>
       Update
@@ -60,12 +60,12 @@
   </thead>
   <tbody>
   <tr>
-    <td class="numeric-cell">{{ job_private_inst_coll.n_instances_by_state['pending'] }}</td>
-    <td class="numeric-cell">{{ job_private_inst_coll.n_instances_by_state['active'] }}</td>
-    <td class="numeric-cell">{{ job_private_inst_coll.n_instances_by_state['inactive'] }}</td>
-    <td class="numeric-cell">{{ job_private_inst_coll.n_instances_by_state['deleted'] }}</td>
-    <td class="numeric-cell">{{ job_private_inst_coll.live_total_cores_mcpu / 1000 }}</td>
-    <td class="numeric-cell">{{ job_private_inst_coll.live_free_cores_mcpu / 1000 }}</td>
+    <td class="numeric-cell">{{ jpim.n_instances_by_state['pending'] }}</td>
+    <td class="numeric-cell">{{ jpim.n_instances_by_state['active'] }}</td>
+    <td class="numeric-cell">{{ jpim.n_instances_by_state['inactive'] }}</td>
+    <td class="numeric-cell">{{ jpim.n_instances_by_state['deleted'] }}</td>
+    <td class="numeric-cell">{{ jpim.live_total_cores_mcpu / 1000 }}</td>
+    <td class="numeric-cell">{{ jpim.live_free_cores_mcpu / 1000 }}</td>
   </tr>
   </tbody>
 </table>
