--- a/notebook/notebook/templates/notebook-form.html
+++ b/notebook/notebook/templates/notebook-form.html
@@ -1,4 +1,6 @@
 <form action="{{ base_path }}/notebook" method="post">
   <input type="hidden" name="_csrf" value="{{ csrf_token }}"/>  
+  <!-- Notebooks don't work currently.
   <button class="nb-create">Launch Jupyter</button>
+  -->
 </form>
