--- a/batch/batch/front_end/templates/batches.html
+++ b/batch/batch/front_end/templates/batches.html
@@ -25,6 +25,8 @@
 	  <ul>
 	    <li>k=v - batches with an attribute with key k and value v</li>
 	    <li>has:k - batches that have an attribute with key k</li>
+			<li>user:u - batches that were created by user u</li>
+			<li>billing_project:bp - batches that were created in billing project bp</li>
 	    <li>state - batches in the given state, one of:
 	      <ul>
 		<li>open</li>
