--- a/batch/batch/front_end/templates/batches.html
+++ b/batch/batch/front_end/templates/batches.html
@@ -1,134 +1,147 @@
 {% extends "layout.html" %}
 {% block title %}Batches{% endblock %}
 {% block head %}
-  <script src="{{ base_path }}/common_static/focus_on_keyup.js"></script>
+<script src="{{ base_path }}/common_static/focus_on_keyup.js"></script>
 {% endblock %}
 {% block content %}
-  <h1>Batches</h1>
-  <div class="flex-col">
-    <div class="flex-col-align-right">
-	<form method="GET" action="{{ base_path }}/batches">
-	  <input style="vertical-align:text-bottom;" id="searchBar" name="q" size=30 type="text"
-		 {% if q %}
-	         value="{{ q }}"
-		 {% else %}
-	         placeholder="Search terms..."
-		 {% endif %}
-		 >
-	  <button type="submit">Search</button>
-	</form>
-	<input id="expand-search-syntax-checkbox" class="expand-checkbox" type="checkbox">
-	<label for="expand-search-syntax-checkbox" class="expand-label">Search Help</label>
-	<div class="expand-content" style="max-width:75%;">
-	  <p>Search batches with the given search terms.  Return batches
-	    that match all terms.  Terms:</p>
-	  <ul>
-	    <li>k=v - batches with an attribute with key k and value v</li>
-	    <li>has:k - batches that have an attribute with key k</li>
-	    <li>state - batches in the given state, one of:
-	      <ul>
-		<li>open</li>
-		<li>closed (not open)</li>
-		<li>running</li>
-		<li>cancelled</li>
-		<li>failure</li>
-		<li>success</li>
-		<li>complete</li>
-	      </ul>
-	      <p>Note: cancelled and failure do not imply complete.
-		cancelled means cancel has been called.  failure means
-		one (or more) jobs have failed.  In either case, the
-		batch may still be running.</p>
-	    </li>
-	    <li>!term - batches not matched by term</li>
-	  </ul>
-	</div>
+<h1>Batches</h1>
+<div class="flex-col">
+  <div class="flex-col-align-right">
+    <form method="GET" action="{{ base_path }}/batches">
+      <input style="vertical-align:text-bottom;" id="searchBar" name="q" size=30 type="text"
+      {% if q %}
+      value="{{ q }}"
+      {% else %}
+      placeholder="Search terms..."
+      {% endif %}
+      >
+      <button type="submit">Search</button>
+    </form>
+    <input id="expand-search-syntax-checkbox" class="expand-checkbox" type="checkbox">
+    <label for="expand-search-syntax-checkbox" class="expand-label">Search Help</label>
+    <div class="expand-content" style="max-width:75%;">
+      <p>Search batches with the given search terms.  Return batches
+        that match all terms.  Terms:
+      </p>
+      <ul>
+        <li>k=v - batches with an attribute with key k and value v</li>
+        <li>has:k - batches that have an attribute with key k</li>
+        <li>state - batches in the given state, one of:
+          <ul>
+            <li>open</li>
+            <li>closed (not open)</li>
+            <li>running</li>
+            <li>cancelled</li>
+            <li>failure</li>
+            <li>success</li>
+            <li>complete</li>
+          </ul>
+          <p>Note: cancelled and failure do not imply complete.
+            cancelled means cancel has been called.  failure means
+            one (or more) jobs have failed.  In either case, the
+            batch may still be running.</p>
+          </li>
+          <li>!term - batches not matched by term</li>
+        </ul>
       </div>
-	<div class='flex-col' style="overflow: auto;">
-	<table class="data-table" id="batches" style="width: 100%">
-	<thead>
-	  <tr>
-	    <th>ID</th>
-	    <th>Name</th>
-	    <th>Submitted</th>
-	    <th>Completed</th>
-	    <th>State</th>
-	    <th>Jobs</th>
-	    <th>Pending</th>
-	    <th>Succeeded</th>
-	    <th>Failed</th>
-	    <th>Cancelled</th>
-	    <th>Duration</th>
-	    <th>Cost</th>
-	  </tr>
-	</thead>
-	<tbody>
-	  {% for batch in batches %}
-	  <tr>
-	    <td class="numeric-cell"><a href="{{ base_path }}/batches/{{ batch['id'] }}">{{ batch['id'] }}</a></td>
-	    <td>
-	      {% if 'attributes' in batch and 'name' in batch['attributes'] and batch['attributes']['name'] is not none %}
-	      {{ batch['attributes']['name'] }}
-	      {% endif %}
-	    </td>
-	    <td>
-	      {% if 'time_closed' in batch and batch['time_closed'] is not none %}
-	      {{ batch['time_closed'] }}
-	      {% endif %}
-	    </td>
-	    <td>
-	      {% if 'time_completed' in batch and batch['time_completed'] is not none %}
-	      {{ batch['time_completed'] }}
-	      {% endif %}
-	    </td>
-	    <td>{{ batch['state'] }}</td>
-	    <td class="numeric-cell">{{ batch['n_jobs'] }}</td>
-	    <td class="numeric-cell">{{ batch['n_jobs'] - batch['n_completed'] }}</td>
-	    <td class="numeric-cell">{{ batch['n_succeeded'] }}</td>
-	    <td class="numeric-cell">{{ batch['n_failed'] }}</td>
-	    <td class="numeric-cell">{{ batch['n_cancelled'] }}</td>
-	    <td class="numeric-cell">
-		  {% if 'duration' in batch and batch['duration'] is not none %}
-		  {{ batch['duration'] }}
-		  {% endif %}
-	    </td>
-	    <td class="numeric-cell">
-	      {% if 'cost' in batch and batch['cost'] is not none %}
-	      {{ batch['cost'] }}
-	      {% endif %}
-	    </td>
-	    {% if not batch['complete'] and batch['state'] != 'Cancelled' %}
-	      <td>
-		<form action="{{ base_path }}/batches/{{ batch['id'] }}/cancel" method="post">
-		  <input type="hidden" name="_csrf" value="{{ csrf_token }}"/>
-		  <button>Cancel</button>
-		</form>
-	      </td>
-	    {% endif %}
+    </div>
+    <div class='flex-col' style="overflow: auto;">
+      <table class="data-table" id="batches" style="width: 100%">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Submitted</th>
+            <th>Completed</th>
+            <th>State</th>
+            <th>Jobs</th>
+            <th>Pending</th>
+            <th>Succeeded</th>
+            <th>Failed</th>
+            <th>Cancelled</th>
+            <th>Duration</th>
+            <th>Cost</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for batch in batches %}
+          <tr>
+            <td class="numeric-cell"><a href="{{ base_path }}/batches/{{ batch['id'] }}">{{ batch['id'] }}</a></td>
+            <td>
+              {% if 'attributes' in batch and 'name' in batch['attributes'] and batch['attributes']['name'] is not none %}
+              {{ batch['attributes']['name'] }}
+              {% endif %}
+            </td>
+            <td>
+              {% if 'time_closed' in batch and batch['time_closed'] is not none %}
+              {{ batch['time_closed'] }}
+              {% endif %}
+            </td>
+            <td>
+              {% if 'time_completed' in batch and batch['time_completed'] is not none %}
+              {{ batch['time_completed'] }}
+              {% endif %}
+            </td>
+            <td>{{ batch['state'] }}</td>
+            <td class="numeric-cell">{{ batch['n_jobs'] }}</td>
+            <td class="numeric-cell">{{ batch['n_jobs'] - batch['n_completed'] }}</td>
+            <td class="numeric-cell">{{ batch['n_succeeded'] }}</td>
+            <td class="numeric-cell">{{ batch['n_failed'] }}</td>
+            <td class="numeric-cell">{{ batch['n_cancelled'] }}</td>
+            <td class="numeric-cell">
+              {% if 'duration' in batch and batch['duration'] is not none %}
+              {{ batch['duration'] }}
+              {% endif %}
+            </td>
+            <td class="numeric-cell">
+              {% if 'cost' in batch and batch['cost'] is not none %}
+              {{ batch['cost'] }}
+              {% endif %}
+            </td>
+            {% if not batch['complete'] and batch['state'] != 'Cancelled' %}
+            <td>
+              <form action="{{ base_path }}/batches/{{ batch['id'] }}/cancel" method="post">
+                <input type="hidden" name="_csrf" value="{{ csrf_token }}"/>
+                <button>Cancel</button>
+              </form>
+            </td>
+            {% endif %}
             <td>
               <form action="{{ base_path }}/batches/{{ batch['id'] }}/delete" method="post">
                 <input type="hidden" name="_csrf" value="{{ csrf_token }}"/>
-                  <button>Delete</button>
+                <button>Delete</button>
               </form>
             </td>
-	  </tr>
-	  {% endfor %}
-	</tbody>
-	</table>
-	</div>
-      {% if last_batch_id is not none %}
-      <form method="GET" action="{{ base_path }}/batches">
-	{% if q is not none %}
-	  <input type="hidden" name="q" value="{{ q }}" />
-	{% endif %}
-	<input type="hidden" name="last_batch_id" value="{{ last_batch_id }}" />
-	<button>
-	  Next page
-	</button>
-      </form>
-      {% endif %}
-  </div>
-  <script type="text/javascript">
-    focusOnSlash("searchBar");
-  </script>
-{% endblock %}
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  {% if first_batch_id is not none %}
+  <form method="GET" action="{{ base_path }}/batches">
+    {% if q is not none %}
+    <input type="hidden" name="q" value="{{ q }}" />
+    {% endif %}
+    <input type="hidden" name="first_batch_id" value="{{ first_batch_id }}" />
+    <button>
+      Previous page
+    </button>
+  </form>
+  {% endif %}
+
+  {% if last_batch_id is not none %}
+  <form method="GET" action="{{ base_path }}/batches">
+    {% if q is not none %}
+    <input type="hidden" name="q" value="{{ q }}" />
+    {% endif %}
+    <input type="hidden" name="last_batch_id" value="{{ last_batch_id }}" />
+    <button>
+      Next page
+    </button>
+  </form>
+  {% endif %}
+</div>
+<script type="text/javascript">
+  focusOnSlash("searchBar");
+</script>
+  {% endblock %}
