[ci] add curlylint and fix some improper html

--- a/ci/ci/templates/index.html
+++ b/ci/ci/templates/index.html
@@ -47,7 +47,7 @@
           <tr>
             <td>
               <a href="https://github.com/{{ wb.repo }}/pull/{{ pr.number }}">
-                {{ pr.title }} <span class="gh-number">#{{ pr.number }}</a>
+                {{ pr.title }} <span class="gh-number">#{{ pr.number }}</span>
               </a>
             </td>
             <td>
