--- a/ci/ci/templates/batch.html
+++ b/ci/ci/templates/batch.html
@@ -2,13 +2,22 @@
 {% block title %}Batch {{ batch['id'] }}{% endblock %}
 {% block content %}
     <h1>Batch {{ batch['id'] }}</h1>
+    <h2>Timing</h2>
+    <div class="attributes">
+      {% for field in ['time_created', 'time_completed', 'duration'] %}
+      {% if field in batch %}
+      <div>{{ field }}: {{ batch[field] }}</div>
+      {% endif %}
+      {% endfor %}
+    </div>
     {% if 'attributes' in batch %}
+    <h2>Attributes</h2>
     <div class="attributes">
       {% for name, value in batch['attributes'].items() %}
       <div>{{ name }}: {{ value }}</div>
       {% endfor %}
-      {% endif %}
     </div>
+    {% endif %}
     <h2>Jobs</h2>
     <table class="data-table" style="line-height: 175%">
       <thead>
