[ci] extract job table into macro

--- a/ci/ci/templates/job-table.html
+++ b/ci/ci/templates/job-table.html
@@ -1,3 +1,4 @@
+{% macro job_table(jobs) %}
 <table class="data-table" style="line-height: 175%">
   <thead>
     <tr>
@@ -38,3 +39,4 @@
     {% endfor %}
   </tbody>
 </table>
+{% endmacro %}
