--- a/ci/ci/templates/index.html
+++ b/ci/ci/templates/index.html
@@ -1,3 +1,4 @@
+{% from "pr-table.html" import pr_table with context %}
 {% extends "layout.html" %}
 {% block title %}CI{% endblock %}
 {% block head %}
@@ -31,48 +32,7 @@
     <h2>PRs</h2>
     {% if wb.prs is not none %}
     {% if wb.prs|length > 0 %}
-    <div class="searchbar-table">
-      <input type="text" id="searchBar" onkeyup="searchTable('prs', 'searchBar')" placeholder="Search terms...">
-      <table id="prs" class="data-table">
-        <thead>
-          <tr>
-            <th>PR</th>
-            <th>Build State</th>
-            <th>Review State</th>
-            <th>Author</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for pr in wb.prs %}
-          <tr>
-            <td>
-              <a href="https://github.com/{{ wb.repo }}/pull/{{ pr.number }}">
-                {{ pr.title }} <span class="gh-number">#{{ pr.number }}</span>
-              </a>
-            </td>
-            <td>
-              {% if pr.build_state is not none %}
-                <a href="{{ base_path }}/watched_branches/{{ wb.index }}/pr/{{ pr.number }}">{{ pr.build_state }}</a>
-              {% else %}
-                pending
-              {% endif %}
-              {% if pr.build_state is not none and pr.out_of_date %}
-                *
-              {% endif %}
-            </td>
-            <td>
-              {% if pr.review_state %}
-              {{ pr.review_state }}
-              {% endif %}
-            </td>
-            <td>
-              {{ pr.author }}
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
+    {{ pr_table(wb) }}
     {% else %}
     No PRs.
     {% endif %}
