--- a/batch/batch/front_end/templates/job.html
+++ b/batch/batch/front_end/templates/job.html
@@ -5,7 +5,7 @@
 
 <h2>Properties</h2>
 <ul>
-  <li>Batch ID: <a href="{{ base_path }}/batches/{{ batch_id }}">{{ batch_id }}</a></li>
+  <li><a href="{{ base_path }}/batches/{{ batch_id }}">Batch ID: {{ batch_id }}</a></li>
   <li>Job ID: {{ job_id }}</li>
   <li>User: {{ job['user'] }} </li>
   <li>Billing Project: {{ job['billing_project'] }}</li>
