[ci] fix flexbox alignment and clean up css

--- a/ci/ci/templates/job-table.html
+++ b/ci/ci/templates/job-table.html
@@ -4,7 +4,7 @@
     <script src="{{ base_path }}/common_static/focus_on_keyup.js"></script>
 {% endblock %}
 <div class="searchbar-table">
-  <input type="text" id="searchBar" onkeyup="searchTable('jobs', 'searchBar')" placeholder="Search terms...">
+  <input type="text" id="jobsSearchBar" onkeyup="searchTable('jobs', 'jobsSearchBar')" placeholder="Search terms...">
   <table id='jobs' class="data-table" style="line-height: 175%">
     <thead>
       <tr>
