--- a/ci/ci/templates/pr-table.html
+++ b/ci/ci/templates/pr-table.html
@@ -1,7 +1,7 @@
-{% macro pr_table(wb, id) %}
+{% macro pr_table(wb, id, searchBarId) %}
 <div class="searchbar-table">
-  <input type="text" id="{{ id }}SearchBar" onkeyup="searchTable('prs', '{{ id }}SearchBar')" placeholder="Search terms..."/>
-  <table id={{ id }} class="data-table">
+  <input type="text" id="{{ searchBarId }}" onkeyup="searchTable('{{ id }}', '{{ searchBarId }}')" placeholder="Search terms..."/>
+  <table id="{{ id }}" class="data-table">
   <thead>
     <tr>
       <th>PR</th>
