--- a/ci/ci/templates/user.html
+++ b/ci/ci/templates/user.html
@@ -39,7 +39,7 @@ GitHub username: {{ gh_username }}
       {% for wb in pr_wbs %}
       {% if wb.prs is not none %}
       <h2>{{ wb.branch }} PRs</h2>
-      {{ pr_table(wb, "myprs") }}
+      {{ pr_table(wb, "myprs", "myprsSearchBar") }}
       {% endif %}
       {% endfor %}
     </div>
@@ -48,7 +48,7 @@ GitHub username: {{ gh_username }}
       {% for wb in review_wbs %}
       {% if wb.prs is not none %}
       <h2>{{ wb.branch }} Assigned Reviews</h2>
-      {{ pr_table(wb, "reviews") }}
+      {{ pr_table(wb, "reviews", "reviewsSearchBar") }}
       {% endif %}
       {% endfor %}
     </div>
