--- a/ci/ci/templates/user.html
+++ b/ci/ci/templates/user.html
@@ -36,6 +36,15 @@ GitHub username: {{ gh_username }}
 <div class="dashboard-grid">
   <div class="col">
     <div>
+      {% for wb in actionable_wbs %}
+      {% if wb.prs is not none %}
+      <h2>{{ wb.branch }} Awaiting Action</h2>
+      {{ pr_table(wb, "actionitems", "actionitemsSearchBar") }}
+      {% endif %}
+      {% endfor %}
+    </div>
+
+    <div>
       {% for wb in pr_wbs %}
       {% if wb.prs is not none %}
       <h2>{{ wb.branch }} PRs</h2>
@@ -47,10 +56,20 @@ GitHub username: {{ gh_username }}
     <div>
       {% for wb in review_wbs %}
       {% if wb.prs is not none %}
-      <h2>{{ wb.branch }} Assigned Reviews</h2>
+      <h2>{{ wb.branch }} Reviews</h2>
       {{ pr_table(wb, "reviews", "reviewsSearchBar") }}
       {% endif %}
       {% endfor %}
+    </div>
+
+    <div>
+      <h2>Authorize SHA</h2>
+      <form action="{{ base_path }}/authorize_source_sha" method="post">
+        <label for="sha">SHA:</label>
+        <input type="hidden" name="_csrf" value="{{ csrf_token }}"/>
+        <input type="text" name="sha" id="sha">
+        <button type="submit">Authorize</button>
+      </form>
     </div>
 
     <div>
