--- a/web_common/web_common/templates/header.html
+++ b/web_common/web_common/templates/header.html
@@ -40,7 +40,15 @@
   </div>
 
   {% if userdata['is_developer'] == 1 %}
-  <a class="header-link" href="{{ ci_base_url }}">CI</a>
+  <div class="header-dropdown">
+    <div class="header-dropdown-item-margin">
+      <a href="{{ ci_base_url }}" class="header-dropdown-link">CI</a>
+      <div class="header-dropdown-menu">
+        <div class="ci-caret header-dropdown-menu-caret"></div>
+        <a class="header-dropdown-menu-link" href="{{ ci_base_url }}/me">Me</a>
+      </div>
+    </div>
+  </div>
   {% endif %}
 
   {% if userdata['is_developer'] == 1 %}
