[linting] add curlylint check for any service that renders jinja2 templates

--- a/notebook/notebook/templates/workshop/index.html
+++ b/notebook/notebook/templates/workshop/index.html
@@ -6,7 +6,7 @@
     {% if userdata %}
        <p>Welcome to the Hail-powered <b>{{ userdata['workshop_name'] }}</b> workshop!</p>
      {% else %}
-       <p>Welcome to the Hail workshop service!
+     <p>Welcome to the Hail workshop service!</p>
      {% endif %}
     <p>Navigate to the <a href="{{ base_path }}/notebook">Notebook</a>
       tab to launch Jupyter with workshop materials installed, or
