--- a/auth/auth/templates/account-error.html
+++ b/auth/auth/templates/account-error.html
@@ -4,10 +4,12 @@
 <div class="vcentered">
  <div><b>Account is in a bad state!</b></div>
   <br>
-  <div>Please contact <a href="mailto:hail-team@broadinstitute.org">hail-team@broadinstitute.org</a><div>
+  <div>
+    Please contact <a href="mailto:hail-team@broadinstitute.org">hail-team@broadinstitute.org</a>
     <br>
     <div class="small">Username: <b>{{ username }}</b></div>
     <div class="small">Email: <b>{{ email }}</b></div>
     <div class="small">State: <b>{{ state }}</b></div>
   </div>
+</div>
 {% endblock %}
