--- a/benchmark-service/benchmark/templates/lookup.html
+++ b/benchmark-service/benchmark/templates/lookup.html
@@ -7,56 +7,54 @@
 <h1>Benchmark System</h1>
 
 <form autocomplete="off" action="{{ base_path }}/lookup" method="get">
-    <div class="autocomplete">
-        <input type="text" name="file" class="autoComplete"></input>
-    </div>
-    <button type="submit" id="button">Lookup</button>
+  <div class="autocomplete">
+    <input type="text" name="file" class="autoComplete"/>
+  </div>
+  <button type="submit" id="button">Lookup</button>
 </form>
 
 {% if file is not none %}
-    <div class="attributes">
-        <div>SHA:
-            {% if benchmarks['sha'] is not none %}
-            {{ benchmarks['sha'] }}
-            {% else %}
-            unknown
-            {% endif %}
-        </div>
-        <div>Geometric Mean:
-            {% if benchmarks['geometric_mean'] is not none %}
-            {{ benchmarks['geometric_mean'] }}
-            {% endif %}
-        </div>
-    </div>
+<div class="attributes">
+  <div>SHA:
+    {% if benchmarks['sha'] is not none %}
+    {{ benchmarks['sha'] }}
+    {% else %}
+    unknown
+    {% endif %}
+  </div>
+  <div>Geometric Mean:
+    {% if benchmarks['geometric_mean'] is not none %}
+    {{ benchmarks['geometric_mean'] }}
+    {% endif %}
+  </div>
+</div>
 
-    <table class="data-table">
-        <thead>
-        <tr>
-            <th>name</th>
-            <th>failed</th>
-            <th>f-stat</th>
-            <th>mean</th>
-            <th>median</th>
-            <th>p-value</th>
-            <th>stdev</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for d in benchmarks['data'].values() %}
-        <tr>
-
-            <td><a href="{{ base_path }}/name/{{ d['name'] }}?file={{ file }}">{{ d['name'] }}</a></td>
-            <td>{{ d['failed'] }}</td>
-            <td>{{ d['f-stat'] }}</td>
-            <td>{{ d['mean'] }}</td>
-            <td>{{ d['median'] }}</td>
-            <td>{{ d['p-value'] }}</td>
-            <td>{{ d['stdev'] }}</td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
+<table class="data-table">
+  <thead>
+    <tr>
+      <th>name</th>
+      <th>failed</th>
+      <th>f-stat</th>
+      <th>mean</th>
+      <th>median</th>
+      <th>p-value</th>
+      <th>stdev</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for d in benchmarks['data'].values() %}
+    <tr>
+      <td><a href="{{ base_path }}/name/{{ d['name'] }}?file={{ file }}">{{ d['name'] }}</a></td>
+      <td>{{ d['failed'] }}</td>
+      <td>{{ d['f-stat'] }}</td>
+      <td>{{ d['mean'] }}</td>
+      <td>{{ d['median'] }}</td>
+      <td>{{ d['p-value'] }}</td>
+      <td>{{ d['stdev'] }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 {% endif %}
 
 <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@7.2.0/dist/js/autoComplete.min.js"></script>
