Fix GitHub icon in top bar of docs

--- a/website/website/templates/nav-top.html
+++ b/website/website/templates/nav-top.html
@@ -30,7 +30,7 @@
         </li>
         <li class="nav-item" style='margin-top:-2px'>
           <a href="https://github.com/hail-is/hail" class='img-link' target='_blank'>
-            <i class="fab fa-github fa-2x"></i>
+            <i class="fa fa-github fa-2x"></i>
           </a>
         </li>
       </ul>
