--- a/web_common/web_common/styles/main.scss
+++ b/web_common/web_common/styles/main.scss
@@ -243,9 +243,25 @@ a {
     }
 
     tr {
-        &:nth-of-type(even) {
-            background-color: #f2f2f2;
+        &:nth-of-type(7n+1) {
+            background-color: #fff4f4;
         }
+        &:nth-of-type(7n+2) {
+            background-color: #fff9f1;
+        }
+        &:nth-of-type(7n+3) {
+            background-color: #fdfdf1;
+        }
+        &:nth-of-type(7n+4) {
+            background-color: #f4fff4;
+        }
+        &:nth-of-type(7n+5) {
+            background-color: #f2f4ff;
+        }
+        &:nth-of-type(7n+6) {
+            background-color: #fff6ff;
+        }
+
         td.data-table-bad {
           color: red;
           border-color: red;
